--- a/index.html
+++ b/index.html
@@ -56,8 +56,104 @@
                     <i class="fa fa-bars text-4xl cursor-pointer" aria-hidden="true"></i>
                 </div>
             </div>
-        </nav>
+        </nav><!-- navbar end -->
 
+        <!-- carousel start -->
+        <section class="carousel-section">
+            <div class="container mx-auto">
+                <div class="carousel w-full h-[calc(100vh-162px)] mt-6">
+                    <div id="slide1" class="carousel-item relative w-full">
+                        <!-- carousel item 1 start-->
+                        <div class="hero h-full bg-[url('./images/banner1.png')]">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-md text-white">
+                                    <h1 class="mb-5 text-5xl text-white font-bold">Exotic tastes at your doorstep</h1>
+                                    <p class="mb-5 font-medium text-xl">We supply highly quality organic products</p>
+                                    <button
+                                        class="btn bg-[#F85559] hover:text-[#f85559] hover:bg-white border-0 text-white">Shop
+                                        Now</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- carousel item 1 end -->
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide4"
+                                class="btn bg-[#121212] border-0 text-white hover:bg-[#F85559] hover:bg-[#F85559] btn-circle">❮</a>
+                            <a href="#slide2"
+                                class="btn bg-[#121212] border-0 text-white hover:bg-[#F85559] btn-circle">❯</a>
+                        </div>
+                    </div>
+                    <div id="slide2" class="carousel-item relative w-full">
+                        <!-- carousel item 2 start-->
+                        <div class="hero h-full bg-[url('./images/banner2.png')]">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-md text-white">
+                                    <h1 class="mb-5 text-5xl text-white font-bold">Exotic tastes at your doorstep</h1>
+                                    <p class="mb-5 font-medium text-xl">We supply highly quality organic products</p>
+                                    <button
+                                        class="btn bg-[#F85559] hover:text-[#f85559] hover:bg-white border-0 text-white">Shop
+                                        Now</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- carousel item 2 end -->
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide1"
+                                class="btn bg-[#121212] border-0 text-white hover:bg-[#F85559] btn-circle">❮</a>
+                            <a href="#slide3"
+                                class="btn bg-[#121212] border-0 text-white hover:bg-[#F85559] btn-circle">❯</a>
+                        </div>
+                    </div>
+                    <div id="slide3" class="carousel-item relative w-full">
+                        <!-- carousel item 3 start-->
+                        <div class="hero h-full bg-[url('./images/banner3.png')]">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-md text-white">
+                                    <h1 class="mb-5 text-5xl text-white font-bold">Exotic tastes at your doorstep</h1>
+                                    <p class="mb-5 font-medium text-xl">We supply highly quality organic products</p>
+                                    <button
+                                        class="btn bg-[#F85559] hover:text-[#f85559] hover:bg-white border-0 text-white">Shop
+                                        Now</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- carousel item 3 end -->
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide2"
+                                class="btn bg-[#121212] border-0 text-white hover:bg-[#F85559] btn-circle">❮</a>
+                            <a href="#slide4"
+                                class="btn bg-[#121212] border-0 text-white hover:bg-[#F85559] btn-circle">❯</a>
+                        </div>
+                    </div>
+                    <div id="slide4" class="carousel-item relative w-full">
+                        <!-- carousel item 4 start-->
+                        <div class="hero h-full bg-[url('./images/banner4.png')]">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-md text-white">
+                                    <h1 class="mb-5 text-5xl text-white font-bold">Exotic tastes at your doorstep</h1>
+                                    <p class="mb-5 font-medium text-xl">We supply highly quality organic products</p>
+                                    <button
+                                        class="btn bg-[#F85559] hover:text-[#f85559] hover:bg-white border-0 text-white">Shop
+                                        Now</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- carousel item 4 end -->
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide3"
+                                class="btn bg-[#121212] border-0 text-white hover:bg-[#F85559] btn-circle">❮</a>
+                            <a href="#slide1"
+                                class="btn bg-[#121212] border-0 text-white hover:bg-[#F85559] btn-circle">❯</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- carousel end -->
     </header>
     <!-- header end -->
     <script>
