--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <!-- fontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- daisy ui css -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css">
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -186,8 +186,8 @@
         <!-- fruit list end -->
     </header><!-- header end -->
 
-    <!-- main start -->
     <main>
+        <!-- deals of the day start -->
         <section class="deal-of-the-day pt-12">
             <div class="container mx-auto">
                 <div class="deals-top-section flex flex-col md:flex-row items-center">
@@ -484,8 +484,67 @@
                     <button class="btn btn-error text-white">Shop All</button>
                 </div>
             </div>
+        </section><!-- deals of the day end -->
+
+        <section class="team">
+            <div class="container mx-auto">
+                <div class="hero min-h-screen bg-[url('./images/banner1.png')]">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content flex flex-col">
+                        <div class="max-w-xl text-white">
+                            <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
+                            <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a
+                                piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                        </div>
+                        <div class="team-members flex flex-col md:flex-row md:gap-20">
+                            <div class="single-member text-white">
+                                <img src="./images/member1.png" alt="Awlad Hossain">
+                                <h2 class="font-bold text-2xl mt-6">Awlad Hossain</h2>
+                                <h3 class="font-medium text-base my-3">Fruits Expert</h3>
+                                <div class="social-icons text-center">
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i>
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i>
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                            <div class="single-member text-white">
+                                <img src="./images/member2.png" alt="Safia Chowdhury">
+                                <h2 class="font-bold text-2xl mt-6">Safia Chowdhury</h2>
+                                <h3 class="font-medium text-base my-3">Fruits Expert</h3>
+                                <div class="social-icons text-center">
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i>
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i>
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                            <div class="single-member text-white">
+                                <img src="./images/member3.png" alt="Rokib Hossain">
+                                <h2 class="font-bold text-2xl mt-6">Rokib Hossain</h2>
+                                <h3 class="font-medium text-base my-3">Fruits Expert</h3>
+                                <div class="social-icons text-center">
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i>
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i>
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                            <div class="single-member text-white">
+                                <img src="./images/member4.png" alt="Chaity">
+                                <h2 class="font-bold text-2xl mt-6">Chaity</h2>
+                                <h3 class="font-medium text-base my-3">Fruits Expert</h3>
+                                <div class="social-icons text-center">
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i>
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i>
+                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
         </section>
-    </main><!-- main end -->
+    </main>
 
 
 
@@ -494,7 +553,6 @@
         let btn = document.querySelector("#toggleMenu");
         let nav = document.querySelector("#navigation");
         let icon = btn.querySelector(".fa-bars");
-
         btn.onclick = function () {
             if (icon.classList.contains('fa-bars')) {
                 icon.classList.replace('fa-bars', 'fa-times');
