change the team section social icon as linkable

--- a/index.html
+++ b/index.html
@@ -502,9 +502,12 @@
                                 <h2 class="font-bold text-2xl mt-6">Awlad Hossain</h2>
                                 <h3 class="font-medium text-base my-3">Fruits Expert</h3>
                                 <div class="social-icons text-center">
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i>
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i>
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                             <div class="single-member text-white">
@@ -512,9 +515,12 @@
                                 <h2 class="font-bold text-2xl mt-6">Safia Chowdhury</h2>
                                 <h3 class="font-medium text-base my-3">Fruits Expert</h3>
                                 <div class="social-icons text-center">
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i>
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i>
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                             <div class="single-member text-white">
@@ -522,9 +528,12 @@
                                 <h2 class="font-bold text-2xl mt-6">Rokib Hossain</h2>
                                 <h3 class="font-medium text-base my-3">Fruits Expert</h3>
                                 <div class="social-icons text-center">
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i>
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i>
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                             <div class="single-member text-white">
@@ -532,9 +541,12 @@
                                 <h2 class="font-bold text-2xl mt-6">Chaity</h2>
                                 <h3 class="font-medium text-base my-3">Fruits Expert</h3>
                                 <div class="social-icons text-center">
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i>
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i>
-                                    <i class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i
+                                            class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </div>
