--- a/index.html
+++ b/index.html
@@ -555,7 +555,117 @@
 
                 </div>
             </div>
+        </section><!-- team end -->
+
+        <!-- why choose us start -->
+        <section class="why-choose-us py-24">
+            <div class="container mx-auto">
+                <div class="row">
+                    <div class="section-title text-center">
+                        <h2 class="font-bold text-[#121212] text-5xl">Why Choose Us</h2>
+                        <p class="font-medium text-base mt-5">Contrary to popular belief, is not simply random text. It
+                            has
+                            roots in a piece of classical<br>
+                            Latin literature from 45 BC, making it over 2000 years old.</p>
+                    </div>
+                    <div class="choose-us-content grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-10 gap-5">
+                        <div class="choose-content-left flex flex-col gap-9">
+                            <div class="single-item flex items-center gap-5">
+                                <div class="choose-img">
+                                    <img src="./images/icon1.png" alt="icon">
+                                </div>
+                                <div>
+                                    <h3 class="text-[#121212] font-bold text-2xl">Dedicated Team</h3>
+                                    <div class="divider m-0 w-24"></div>
+                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                        are there for you to pick
+                                        the most amazing and fresh
+                                        fruits.</p>
+                                </div>
+                            </div>
+
+                            <div class="single-item flex items-center gap-5">
+                                <div class="choose-img">
+                                    <img src="./images/icon2.png" alt="icon">
+                                </div>
+                                <div>
+                                    <h3 class="text-[#121212] font-bold text-2xl">Fresh is Best</h3>
+                                    <div class="divider m-0 w-24"></div>
+                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                        are there for you to pick
+                                        the most amazing and fresh
+                                        fruits.</p>
+                                </div>
+                            </div>
+
+                            <div class="single-item flex items-center gap-5">
+                                <div class="choose-img">
+                                    <img src="./images/icon3.png" alt="icon">
+                                </div>
+                                <div>
+                                    <h3 class="text-[#121212] font-bold text-2xl">Gift Certificates</h3>
+                                    <div class="divider m-0 w-24"></div>
+                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                        are there for you to pick
+                                        the most amazing and fresh
+                                        fruits.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="choose-content-center">
+                            <img src="./images/whychoose1.png" alt="why choose">
+                        </div>
+
+                        <div class="choose-content-right flex flex-col gap-9">
+                            <div class="single-item flex items-center text-end gap-5">
+                                <div>
+                                    <h3 class="text-[#121212] font-bold text-2xl">Integrated Supplier</h3>
+                                    <div class="divider m-0 w-24 ml-auto"></div>
+                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                        are there for you to pick
+                                        the most amazing and fresh
+                                        fruits.</p>
+                                </div>
+                                <div class="choose-img">
+                                    <img src="./images/icon4.png" alt="icon">
+                                </div>
+                            </div>
+
+                            <div class="single-item flex items-center text-end gap-5">
+                                <div>
+                                    <h3 class="text-[#121212] font-bold text-2xl">Sustainable Practice</h3>
+                                    <div class="divider m-0 w-24 ml-auto"></div>
+                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                        are there for you to pick
+                                        the most amazing and fresh
+                                        fruits.</p>
+                                </div>
+                                <div class="choose-img">
+                                    <img src="./images/icon5.png" alt="icon">
+                                </div>
+                            </div>
+
+                            <div class="single-item flex items-center text-end gap-5">
+                                <div>
+                                    <h3 class="text-[#121212] font-bold text-2xl">The Benefits Only</h3>
+                                    <div class="divider m-0 w-24 ml-auto"></div>
+                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                        are there for you to pick
+                                        the most amazing and fresh
+                                        fruits.</p>
+                                </div>
+                                <div class="choose-img">
+                                    <img src="./images/icon6.png" alt="icon">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- why choose us end -->
     </main>
 
 
