footer part end

--- a/index.html
+++ b/index.html
@@ -667,7 +667,36 @@
         </section>
         <!-- why choose us end -->
     </main>
-
+    <footer class="footer footer-center p-16 bg-[#121212] text-primary-content">
+        <div>
+            <a href="index.html"
+                class="flex items-center lg:text-4xl md:text-xl text-4xl font-bold text-black md:text-white"><img
+                    class="inline-block ml-8 md:ml-0 mr-3 w-10 md:w-7 lg:w-auto" src="./images/logo.png"
+                    alt="logo">Fruit
+                Burst</a>
+            <div class="grid grid-flow-col gap-4 mt-5">
+                <a class="link link-hover text-lg text-white">Home</a>
+                <a class="link link-hover text-lg text-white">About us</a>
+                <a class="link link-hover text-lg text-white">Shop</a>
+                <a class="link link-hover text-lg text-white">All Fruits</a>
+                <a class="link link-hover text-lg text-white">Support</a>
+                <a class="link link-hover text-lg text-white">My Account</a>
+            </div>
+        </div>
+        <div>
+            <div class="social-icons text-center">
+                <div class="grid grid-flow-col gap-6 text-white">
+                    <a href="#"><i class="text-4xl fa-brands fa-twitter"></i></a>
+                    <a href="#"><i
+                            class="rounded-full bg-[white] text-[blue] w-10 h-10 leading-10 text-2xl fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="text-4xl text-center fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="text-4xl text-center fa-brands fa-linkedin-in"></i></a>
+                    <a href="#"><i class="text-4xl text-center fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="text-4xl text-center fa-brands fa-apple"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script>
