some align change in team section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <!-- carousel end -->
 
         <!-- fruit list start -->
-        <section class="fruit-list hidden md:flex">
+        <section class="fruit-list hidden lg:flex">
             <div class="max-w-4xl mx-auto bg-white mt-[-120px] relative p-10 rounded-md shadow">
                 <div class="fruits flex md:justify-between justify-center text-center gap-5 md:gap-2 flex-wrap">
                     <div class="fruit1">
@@ -193,8 +193,8 @@
         <section class="deal-of-the-day pt-12">
             <div class="container mx-auto">
                 <div class="deals-top-section flex flex-col md:flex-row items-center px-10 md:px-0">
-                    <div class="deals-content-left flex-1 text-center md:text-left py-8 md:pr-10">
-                        <h3 class="text-5xl mb-6 font-extrabold text-[#121212]">Deal of the day</h3>
+                    <div class="deals-content-left flex-1 text-center md:text-left py-8 md:pr-10 px-10 lg:px-0">
+                        <h3 class="text-4xl lg:text-5xl mb-6 font-extrabold text-[#121212]">Deal of the day</h3>
                         <p class="font-medium text-base"> Contrary to popular belief, is not
                             simply random text. It has
                             roots in a
@@ -202,42 +202,42 @@
                             classical
                             Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
-                    <div class="deals-content-right flex-1">
+                    <div class="deals-content-right flex-1 pr-10">
                         <div class="grid grid-flow-col justify-end gap-3 md:gap-5 text-center auto-cols-max">
                             <div class="flex flex-col justify-center items-center">
-                                <span class="countdown font-mono text-3xl md:text-5xl font-extrabold">
+                                <span class="countdown font-mono text-3xl lg:text-5xl font-extrabold">
                                     <span style="--value:29;"></span>
                                 </span>
                                 <span class="text-base text-[#121212] opacity-60 font-medium">Days</span>
                             </div>
                             <div class="flex flex-col">
                                 <span
-                                    class="countdown font-mono text-3xl md:text-5xl font-extrabold before:mr-2 md:before:mr-4 before:content-[url('./images/frame.png')]">
+                                    class="countdown font-mono text-3xl lg:text-5xl font-extrabold before:mr-2 md:before:mr-4 before:content-[url('./images/frame.png')]">
                                     <span style="--value:15;"></span>
                                 </span>
-                                <span class="ml-5 md:ml-11 text-base text-[#121212] opacity-60 font-medium">Hours</span>
+                                <span class="ml-8 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Hours</span>
                             </div>
                             <div class="flex flex-col">
                                 <span
-                                    class="countdown font-mono text-3xl md:text-5xl font-extrabold before:mr-2 md:before:mr-4 before:content-[url('./images/frame.png')]">
+                                    class="countdown font-mono text-3xl lg:text-5xl font-extrabold before:mr-2 md:before:mr-4 before:content-[url('./images/frame.png')]">
                                     <span style="--value:25;"></span>
                                 </span>
                                 <span
-                                    class="ml-5 md:ml-11 text-base text-[#121212] opacity-60 font-medium">Minutes</span>
+                                    class="ml-8 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Minutes</span>
                             </div>
                             <div class="flex flex-col">
                                 <span
-                                    class="countdown font-mono text-3xl md:text-5xl font-extrabold before:mr-2 md:before:mr-4 before:content-[url('./images/frame.png')]">
+                                    class="countdown font-mono text-3xl lg:text-5xl font-extrabold before:mr-2 md:before:mr-4 before:content-[url('./images/frame.png')]">
                                     <span style="--value:08;"></span>
                                 </span>
                                 <span
-                                    class="ml-5 md:ml-11 text-base text-[#121212] opacity-60 font-medium">Seconds</span>
+                                    class="ml-8 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Seconds</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- deals bottom start -->
-                <div class="deals grid lg:grid-cols-4 md:grid-cols-3 grid-cols-1 gap-5 px-10 md:px-0 mt-10 md:mt-2">
+                <div class="deals grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-5 px-10 lg:px-0 mt-10 md:mt-2">
                     <div
                         class="deal flex flex-col justify-center items-center border-spacing-4 shadow-xl border p-12 rounded-md">
                         <img src="./images/fruit6.png" alt="apple">
@@ -505,10 +505,11 @@
                             <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a
                                 piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                         </div>
-                        <div class="team-members flex flex-col mb-3 md:mb-0 md:flex-row md:gap-20">
+                        <div
+                            class="team-members flex flex-col mb-3 md:mb-0 md:flex-row md:gap-10 lg:gap-20 md:px-3 lg:px-0">
                             <div class="single-member text-white flex flex-col items-center justify-center mb-10">
                                 <img src="./images/member1.png" alt="Awlad Hossain">
-                                <h2 class="font-bold text-2xl mt-6">Awlad Hossain</h2>
+                                <h2 class="font-bold text-[18px] lg:text-2xl mt-6">Awlad Hossain</h2>
                                 <h3 class="font-medium text-base my-3">Fruits Expert</h3>
                                 <div class="social-icons text-center flex gap-3 justify-center">
                                     <a href="#"><i
@@ -521,7 +522,7 @@
                             </div>
                             <div class="single-member text-white flex flex-col items-center justify-center mb-10">
                                 <img src="./images/member2.png" alt="Safia Chowdhury">
-                                <h2 class="font-bold text-2xl mt-6">Safia Chowdhury</h2>
+                                <h2 class="font-bold text-[18px] lg:text-2xl mt-6">Safia Chowdhury</h2>
                                 <h3 class="font-medium text-base my-3">Fruits Expert</h3>
                                 <div class="social-icons text-center flex gap-3 justify-center">
                                     <a href="#"><i
@@ -534,7 +535,7 @@
                             </div>
                             <div class="single-member text-white flex flex-col items-center justify-center mb-10">
                                 <img src="./images/member3.png" alt="Rokib Hossain">
-                                <h2 class="font-bold text-2xl mt-6">Rokib Hossain</h2>
+                                <h2 class="font-bold text-[18px] lg:text-2xl mt-6">Rokib Hossain</h2>
                                 <h3 class="font-medium text-base my-3">Fruits Expert</h3>
                                 <div class="social-icons text-center flex gap-3 justify-center">
                                     <a href="#"><i
@@ -545,9 +546,9 @@
                                             class="rounded-full bg-[#F85559] w-6 h-6 leading-6 fa-brands fa-linkedin-in"></i></a>
                                 </div>
                             </div>
-                            <div class="single-member text-white flex flex-col items-center justify-center">
+                            <div class="single-member text-white flex flex-col items-center justify-center mb-10">
                                 <img src="./images/member4.png" alt="Chaity">
-                                <h2 class="font-bold text-2xl mt-6">Chaity</h2>
+                                <h2 class="font-bold text-[18px] lg:text-2xl mt-6">Chaity</h2>
                                 <h3 class="font-medium text-base my-3">Fruits Expert</h3>
                                 <div class="social-icons text-center flex gap-3 justify-center">
                                     <a href="#"><i
@@ -577,15 +578,16 @@
                             roots in a piece of classical<br>
                             Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
-                    <div class="choose-us-content grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-10 gap-5">
-                        <div class="choose-content-left flex flex-col gap-9 order-2 md:order-1">
+                    <div
+                        class="choose-us-content grid lg:grid-cols-3 md:grid-cols-3 grid-cols-1 mt-10 gap-5 px-10 lg:px-0">
+                        <div class="choose-content-left flex flex-col gap-9 order-2 lg:order-1">
                             <div
                                 class="single-item flex flex-col md:flex-row text-center md:text-left justify-center items-center gap-5">
                                 <div class="choose-img">
                                     <img src="./images/icon1.png" alt="icon">
                                 </div>
                                 <div>
-                                    <h3 class="text-[#121212] font-bold text-2xl">Dedicated Team</h3>
+                                    <h3 class="text-[#121212] font-bold text-base lg:text-2xl">Dedicated Team</h3>
                                     <div class="divider mx-auto md:m-0 w-24"></div>
                                     <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
                                         are there for you to pick
@@ -625,16 +627,16 @@
                             </div>
                         </div>
 
-                        <div class="choose-content-center order-1 md:order-2">
+                        <div class="choose-content-center order-3 lg:order-2">
                             <img src="./images/whychoose1.png" alt="why choose">
                         </div>
 
-                        <div class="choose-content-right flex flex-col gap-9 order-3 md:order-3">
+                        <div class="choose-content-right flex flex-col gap-9 order-2 lg:order-3">
                             <div
                                 class="single-item flex flex-col md:flex-row text-center md:text-end justify-center items-center gap-5">
                                 <div class="order-2 md:order-1">
                                     <h3 class="text-[#121212] font-bold text-2xl">Integrated Supplier</h3>
-                                    <div class="divider mx-auto md:m-0 w-24"></div>
+                                    <div class="divider ml-[calc(50%-48px)] lg:ml-auto my-0 w-24"></div>
                                     <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
@@ -649,7 +651,7 @@
                                 class="single-item flex flex-col md:flex-row text-center md:text-end justify-center items-center gap-5">
                                 <div class="order-2 md:order-1">
                                     <h3 class="text-[#121212] font-bold text-2xl">Sustainable Practice</h3>
-                                    <div class="divider mx-auto md:m-0 w-24"></div>
+                                    <div class="divider ml-[calc(50%-48px)] lg:ml-auto my-0 w-24"></div>
                                     <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
@@ -664,7 +666,7 @@
                                 class="single-item flex flex-col md:flex-row text-center md:text-end justify-center items-center gap-5">
                                 <div class="order-2 md:order-1">
                                     <h3 class="text-[#121212] font-bold text-2xl">The Benefits Only</h3>
-                                    <div class="divider mx-auto md:m-0 w-24"></div>
+                                    <div class="divider ml-[calc(50%-48px)] lg:ml-auto my-0 w-24"></div>
                                     <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
